--- a/qbittorrent-ee-rpi/Dockerfile
+++ b/qbittorrent-ee-rpi/Dockerfile
@@ -1,4 +1,4 @@
-FROM arm32v7/alpine as compilerOS
+FROM alpine as compilerOS
 
 #compiling qB
 
@@ -13,8 +13,8 @@ ADD libtorrent-rasterbar-${LIBTORRENT_VER}.tar.gz \qbtorrent
 # RUN   wget -P /qbtorrent https://github.com/arvidn/libtorrent/releases/download/libtorrent-rasterbar-${LIBTORRENT_VER}.tar.gz \
 # &&   tar  -zxvf  /qbtorrent/libtorrent-rasterbar-${LIBTORRENT_VER}.tar.gz   -C    /qbtorrent  \
 RUN   cd  /qbtorrent/libtorrent-rasterbar-${LIBTORRENT_VER} \
-&&   ./configure \
-&&   make -j4 install-strip
+&&   ./configure --disable-debug --enable-encryption CXXFLAGS="-std=c++14"\
+&&   make -j2 install-strip
 
 
 #qBittorrent-Enhanced-Edition
@@ -24,7 +24,7 @@ ADD release-4.2.1.10.zip /qbtorrent
 # RUN  wget  -P /qbtorrent https://github.com/c0re100/qBittorrent-Enhanced-Edition/archive/release-4.2.1.10.zip   \
 RUN  cd  /qbtorrent/qBittorrent-Enhanced-Edition-release-${BTORRENT_VER} \
 &&   ./configure   --disable-gui \
-&&   make -j4 install \
+&&   make -j2 install \
 &&   ldd /usr/local/bin/qbittorrent-nox   |cut -d ">" -f 2|grep lib|cut -d "(" -f 1|xargs tar -chvf /qbtorrent/qbittorrent.tar  \
 &&   mkdir /qbittorrent   \
 &&   tar  -xvf /qbtorrent/qbittorrent.tar   -C  /qbittorrent   \
@@ -32,26 +32,20 @@ RUN  cd  /qbtorrent/qBittorrent-Enhanced-Edition-release-${BTORRENT_VER} \
  
 
  # RunOS
-FROM arm32v7/alpine:latest
+FROM alpine:latest
 
-ARG  S6_VER=1.22.1.0
-
-ENV TRACKERSAUTO=YES
 ENV TZ=Asia/Shanghai
 ENV WEBUIPORT=8989
 
 COPY root /
 COPY --from=compilerOS  /qbittorrent  /
 
-# install bash curl caddy tzdata s6 overlay python3
-RUN  wget --no-check-certificate https://github.com/just-containers/s6-overlay/releases/download/v${S6_VER}/s6-overlay-amdhf.tar.gz  \
-&&   tar -xvzf s6-overlay-amdhf.tar.gz  \
-&&   rm s6-overlay-amdhf.tar.gz   \
-&&   apk add --no-cache bash curl ca-certificates  tzdata  python3 \
+# install dependance
+RUN  apk add --no-cache bash curl ca-certificates tzdata \
 &&   rm -rf /var/cache/apk/*   \
-&&   chmod a+x  /usr/local/bin/qbittorrent-nox  
+&&   chmod a+x  /usr/local/bin/qbittorrent-nox
 
 
 VOLUME /Downloads /config
 EXPOSE 8989  6881  6881/udp
-ENTRYPOINT [ "qbittorrent-nox"]
+ENTRYPOINT [ "entrypoint.sh"]
