--- a/qbittorrent-ee-rpi/Dockerfile
+++ b/qbittorrent-ee-rpi/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine as compilerOS
 
 COPY buildfs /
 
-RUN apk add --no-cache ca-certificates make g++ gcc qt5-qtsvg-dev boost-dev qt5-qttools-dev file \
+RUN apk add --no-cache ca-certificates make g++ gcc qt5-qtsvg-dev boost-dev qt5-qttools-dev file curl \
 && /download.sh && mkdir /qbtorrent \
 && tar -zxvf  /libtorrent-rasterbar-${LIBTORRENT_VER}.tar.gz -C /qbtorrent \
 &&  cd  /qbtorrent/libtorrent-rasterbar-${LIBTORRENT_VER} \
