Fix compile error

--- a/qbittorrent-ee-rpi/Dockerfile
+++ b/qbittorrent-ee-rpi/Dockerfile
@@ -4,10 +4,10 @@ COPY buildfs /
 
 RUN apk add --no-cache ca-certificates make g++ gcc qt5-qtsvg-dev boost-dev qt5-qttools-dev file curl \
 &&  /download.sh && mkdir /qbtorrent \
-&&  tar -zxvf  /libtorrent.tar.gz -C /qbtorrent \
-&&  cd  /qbtorrent \
-&&  &&   mv $(find . -name libtorrent-*) libtorrent \
-&&  cd  libtorrent \
+&&  tar -zxvf /libtorrent.tar.gz -C /qbtorrent \
+&&  cd /qbtorrent \
+&&  mv $(find . -name libtorrent-*) libtorrent \
+&&  cd libtorrent \
 &&  ./configure --disable-debug --enable-encryption CXXFLAGS="-std=c++14" \
 &&  make -j$(nproc) install-strip
 # qBittorrent-Enhanced-Edition
