add self trigger

--- a/.github/workflows/qbittorrent-buildx.yml
+++ b/.github/workflows/qbittorrent-buildx.yml
@@ -6,6 +6,7 @@ on:
             - master
         paths:
             - qbittorrent-ee-rpi/
+            - .github/workflows/qbittorrent-buildx.yml
 
 
 jobs:
