--- a/.github/workflows/qbittorrent-buildx.yml
+++ b/.github/workflows/qbittorrent-buildx.yml
@@ -22,5 +22,5 @@ jobs:
             - name: Build Image
               run: docker buildx build 
                --platform=linux/arm/v7, linux/arm64, linux/amd64 
-               --file ./qbittorrent-ee-rpi/Dockerfile 
-               --tag ly0007/qbittorrent-ee-rpi:latest
+               --tag ly0007/qbittorrent-ee-rpi:latest 
+               ./qbittorrent-ee-rpi
