--- a/.github/workflows/qbittorrent-buildx.yml
+++ b/.github/workflows/qbittorrent-buildx.yml
@@ -1,4 +1,4 @@
-name: Build qBittorrent
+name: Build Multiarch qBittorrent
 
 on:
     push:
@@ -10,16 +10,8 @@ on:
 
 
 jobs:
-    test:
+    main:
         runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Vaild Image
-              run: docker build -t qbittorrent-ee:test ./qbittorrent-ee-rpi
-    build:
-        runs-on: ubuntu-latest
-        needs: [test]
         steps:
             - name: Checkout
               uses: actions/checkout@v2
