--- a/.github/workflows/qbittorrent-buildx.yml
+++ b/.github/workflows/qbittorrent-buildx.yml
@@ -12,7 +12,7 @@ env:
     REPO_NAME: ly0007/qbittorrent-ee-rpi
 
 jobs:
-    main:
+    arm:
         runs-on: ubuntu-latest
 
         steps:
@@ -23,7 +23,7 @@ jobs:
               with:
                 version: latest
             - name: Login
-              run: docker login -u {{secrets.DOCKER_ID}} -p {{secrets.DOCKER_PASSWORD}}
+              run: docker login -u ${{secrets.DOCKER_ID}} -p ${{secrets.DOCKER_PWD}}
             - name: Build & Push
               run: docker buildx build 
                --platform=linux/arm/v7,linux/arm64
