--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
       paths:
         - qbittorrent-ee/*
+        - ss-tproxy/*
 
 
 jobs: 
@@ -14,3 +15,11 @@ jobs:
               uses: actions/checkout@v2
             - name: Vaild
               run: docker build ./qbittorrent-ee
+
+    ss-tproxy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            - name: Vaild
+              run: docker build ./ss-tproxy
