--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
       paths:
         - qbittorrent-ee/*
+        - shadowsocks-libev/*
         - ss-tproxy/*
 
 
@@ -15,6 +16,14 @@ jobs:
               uses: actions/checkout@v2
             - name: Vaild
               run: docker build ./qbittorrent-ee
+
+    shadowsocks-libev:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            - name: Vaild
+              run: docker build ./shadowsocks-libev
 
     ss-tproxy:
         runs-on: ubuntu-latest
