--- a/.github/workflows/shadowsocks-libev.yml
+++ b/.github/workflows/shadowsocks-libev.yml
@@ -5,7 +5,7 @@ on:
         branches:
             - master
         paths:
-            - shadowsocks-libev/*
+            - shadowsocks-libev/**
             - .github/workflows/shadowsocks-libev.yml
 
 env:
