--- a/.github/workflows/qbittorrent.yml
+++ b/.github/workflows/qbittorrent.yml
@@ -5,7 +5,7 @@ on:
         branches:
             - master
         paths:
-            - qbittorrent-ee/*
+            - qbittorrent-ee/**
             - .github/workflows/qbittorrent.yml
 
 env:
