update parm & lib to support zimuku

--- a/subwatcher/Dockerfile
+++ b/subwatcher/Dockerfile
@@ -6,7 +6,7 @@ LABEL maintainer="ly0007@yeah.net" \
 
 COPY rootfs /
 
-RUN apk add --no-cache inotify-tools python3 \
+RUN apk add --no-cache inotify-tools python3 libxml2 libxslt \
     && apk add --no-cache --virtual .build-deps libxml2-dev libxslt-dev build-base python3-dev \
     && pip3 install subfinder --no-cache-dir \
     && apk del .build-deps \
@@ -14,5 +14,7 @@ RUN apk add --no-cache inotify-tools python3 \
     && chmod 755 /usr/local/bin/subwatcher
 
 VOLUME [ "/data" ]
+
+ENV SUBFINDER_PARM=""
 
 ENTRYPOINT [ "subwatcher", "/data" ]
