--- a/chinadns_dnsmasq/Dockerfile
+++ b/chinadns_dnsmasq/Dockerfile
@@ -5,7 +5,10 @@ ENV DNS_URL https://github.com/clowwindy/ChinaDNS/releases/download/${DNS_VER}/c
 ENV DNS_FILE chinadns.tar.gz
 
 RUN mkdir /build-package \
-    && apk add --no-cache curl git build-base linux-headers
+    ## DEBUG
+    && sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories \
+    ## DEBUG
+    && apk add --no-cache curl git build-base linux-headers libuv-dev
 
 RUN mkdir chinadns \
     && cd chinadns \
@@ -17,6 +20,11 @@ RUN mkdir chinadns \
     && mkdir -p /build-package/backup \
     && cp chnroute.txt /build-package/backup \
     && cd / \
+    ## build dns2tcp
+    && git clone https://github.com/zfl9/dns2tcp \
+    && cd dns2tcp \
+    && make && make install DESTDIR=/build-package/usr/local/bin \
+    && cd / \
     ## download dnsmasq-china-list
     && mkdir -p /build-package/backup/dnsmasq.d/ \
     && git clone --depth=1 https://github.com/felixonmars/dnsmasq-china-list.git \
@@ -25,10 +33,13 @@ RUN mkdir chinadns \
 
 FROM alpine:latest
 
+ENV CHINA_DNS=114.114.114.114 \
+    TRUST_DNS=8.8.8.8
+
 COPY rootfs /
 COPY --from=builder  /build-package  /
 
-RUN apk add --no-cache dnsmasq \
+RUN apk add --no-cache dnsmasq libuv \
     && chmod +x /usr/bin/entrypoint.sh
 
 EXPOSE 53
