--- a/chinadns_dnsmasq/Dockerfile.ng
+++ b/chinadns_dnsmasq/Dockerfile.ng
@@ -32,7 +32,7 @@ ENV CHINA_DNS=114.114.114.114 \
 COPY rootfsng /
 COPY --from=builder  /build-package  /
 
-RUN apk add --no-cache dnsmasq libuv \
+RUN apk add --no-cache dnsmasq libuv ipset \
     && chmod +x /usr/bin/entrypoint.sh
 
 EXPOSE 53
