subwatcher: Add libssl-dev to dependance package

--- a/subwatcher/Dockerfile
+++ b/subwatcher/Dockerfile
@@ -7,7 +7,7 @@ LABEL maintainer="ly0007@yeah.net" \
 COPY rootfs /
 
 RUN apk add --no-cache inotify-tools python3 libxml2 libxslt \
-    && apk add --no-cache --virtual .build-deps libxml2-dev libxslt-dev build-base python3-dev \
+    && apk add --no-cache --virtual .build-deps libxml2-dev libxslt-dev build-base python3-dev libssl-dev \
     && pip3 install subfinder --no-cache-dir \
     && apk del .build-deps \
     && pip3 uninstall -y setuptools pip \
