Fix Subwatcher issue

--- a/subwatcher/Dockerfile
+++ b/subwatcher/Dockerfile
@@ -7,10 +7,9 @@ LABEL maintainer="ly0007@yeah.net" \
 COPY rootfs /
 
 RUN apk add --no-cache inotify-tools python3 libxml2 libxslt libffi \
-    && apk add --no-cache --virtual .build-deps libxml2-dev libxslt-dev build-base python3-dev libffi-dev \
+    && apk add --no-cache --virtual .build-deps libxml2-dev libxslt-dev build-base python3-dev libffi-dev py3-pip \
     && pip3 install subfinder --no-cache-dir \
     && apk del .build-deps \
-    && pip3 uninstall -y setuptools pip \
     && chmod 755 /usr/local/bin/subwatcher
 
 VOLUME [ "/data" ]
