Fix subwatcher run problem

--- a/subwatcher/Dockerfile
+++ b/subwatcher/Dockerfile
@@ -6,8 +6,8 @@ LABEL maintainer="ly0007@yeah.net" \
 
 COPY rootfs /
 
-RUN apk add --no-cache inotify-tools python3 libxml2 libxslt libffi \
-    && apk add --no-cache --virtual .build-deps libxml2-dev libxslt-dev build-base python3-dev libffi-dev py3-pip \
+RUN apk add --no-cache inotify-tools python3 py3-pip libxml2 libxslt libffi \
+    && apk add --no-cache --virtual .build-deps libxml2-dev libxslt-dev build-base python3-dev libffi-dev \
     && pip3 install subfinder --no-cache-dir \
     && apk del .build-deps \
     && chmod 755 /usr/local/bin/subwatcher
