--- a/.github/workflows/tproxy.yml
+++ b/.github/workflows/tproxy.yml
@@ -26,7 +26,7 @@ jobs:
               run: docker login -u ${{secrets.DOCKER_ID}} -p ${{secrets.DOCKER_PWD}}
             - name: Build & Push
               run: docker buildx build 
-               --platform=linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64 
+               --platform=linux/amd64,linux/arm/v7,linux/arm64 
                --tag $REPO_NAME:latest 
                --push 
                ./tproxy
