--- a/tproxy/Dockerfile
+++ b/tproxy/Dockerfile
@@ -19,7 +19,7 @@ VOLUME /config
 
 ENV REDIR_PORT=10800 \
     SERVER_PORT=10863 \
-    ENABLE_MINI_MODE=1 \
-    ENABLE_OUTPUT_REROUTE=0
+    CHNROUTE_MODE=1 \
+    OUTPUT_CHAIN_REROUTE=0
 
 ENTRYPOINT [ "entrypoint.sh" ]
