Update CURL max check time

--- a/qbittorrent-ee/Dockerfile
+++ b/qbittorrent-ee/Dockerfile
@@ -65,4 +65,4 @@ EXPOSE $WEBUI_PORT  $PEER_PORT  $PEER_PORT/udp
 ENTRYPOINT "/init"
 
 HealthCheck --interval=60s --timeout=3s --retries=3 \
-    CMD curl -fs http://localhost:{$WEBUI_PORT} || exit 1
+    CMD curl -m 5 -fs http://localhost:{$WEBUI_PORT} || exit 1
